--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,11 +5,26 @@
 <html>
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
+        @*<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">*@
+        <link rel="stylesheet"  href="./assests/stylesheets.css">
+        @*<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">*@
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+        <script src="@routes.Assets.at("../public/javascripts/messaging.js")" type="text/javascript"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     </head>
     <body>
+
+        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Messaging</a>
+                </div>
+            </div>
+        </div>
+        <div class="container-messaging">
         @content
+        </div>
     </body>
+
 </html>
